--- a/content/about.html
+++ b/content/about.html
@@ -5,38 +5,38 @@ date: '2022-06-24'
 
 
 
-<div id="background" class="section level2">
-<h2>BACKGROUND</h2>
+<div id="background" class="section level1">
+<h1>BACKGROUND</h1>
 <p>I am a former researcher in psycho-oncology and currently work in the domain of
 cardiological epidemiology. Here I use a mixture of classical statistical
 and modern machine learning methods to build prediction models for the onset of
 cardiovascular disease.</p>
 </div>
-<div id="publications" class="section level2">
-<h2>PUBLICATIONS</h2>
-<div id="research" class="section level3">
-<h3>RESEARCH</h3>
+<div id="publications" class="section level1">
+<h1>PUBLICATIONS</h1>
+<div id="research" class="section level2">
+<h2>RESEARCH</h2>
 <p>As a researcher I have authored and co-authored several research papers and
 posters, most of which can be found
-<a href="https://scholar.google.com/citations?user=fzccSmMAAAAJ/"><strong>here</strong></a>.</p>
+<a href="https://scholar.google.com/citations?user=fzccSmMAAAAJ/"><em>here</em></a>.</p>
 </div>
-<div id="r-packages" class="section level3">
-<h3>R PACKAGES</h3>
+<div id="r-packages" class="section level2">
+<h2>R PACKAGES</h2>
 <p>I am also a developer of R packages
-<a href="https://github.com/janbrederecke/prepareD/"><strong>prepareD</strong></a>,
-<a href="https://github.com/janbrederecke/analyzeD/"><strong>analyzeD</strong></a>,
-<a href="https://github.com/janbrederecke/visualizeD/"><strong>visualizeD</strong></a>,
-and <a href="https://github.com/janbrederecke/predicteD/"><strong>predicteD</strong></a>
+<a href="https://github.com/janbrederecke/prepareD/"><em>prepareD</em></a>,
+<a href="https://github.com/janbrederecke/analyzeD/"><em>analyzeD</em></a>,
+<a href="https://github.com/janbrederecke/visualizeD/"><em>visualizeD</em></a>,
+and <a href="https://github.com/janbrederecke/predicteD/"><em>predicteD</em></a>
 that are designed to improve data analysis workflows in my
-current projects. In addition, I am a contributor to the <a href="https://github.com/johnkarlen/climbeR/"><strong>climbeR</strong></a> package
+current projects. In addition, I am a contributor to the <a href="https://github.com/johnkarlen/climbeR/"><em>climbeR</em></a> package
 that can be used to visualize results of random forest models and will soon be
 available again on CRAN.</p>
 </div>
 </div>
-<div id="lately" class="section level2">
-<h2>LATELY</h2>
-<div id="r-shiny" class="section level3">
-<h3>R SHINY</h3>
+<div id="lately" class="section level1">
+<h1>LATELY</h1>
+<div id="r-shiny" class="section level2">
+<h2>R SHINY</h2>
 <p>I currently work on the development of multiple Shiny apps e.g. for the
 European Heart Failure Score project and others.</p>
 </div>
