--- a/content/about.html
+++ b/content/about.html
@@ -7,37 +7,50 @@ date: '2022-06-24'
 
 <div id="background" class="section level1">
 <h1>BACKGROUND</h1>
-<p>I am a former researcher in psycho-oncology and currently work in the domain of
-cardiological epidemiology. Here I use a mixture of classical statistical
-and modern machine learning methods to build prediction models for the onset of
-cardiovascular disease.</p>
+<p>I have both a bachelor’s and a master’s degree in psychology. After my studies I
+initially worked as a researcher in psycho-oncology before transitioning to the
+domain of epidemiology. Here I use a mixture of classical statistical
+and modern machine learning methods to conduct lots of survival analyses in
+different cohort studies and build predictive models for the onset of
+cardiovascular disease. I have been using R since I was an undergraduate and
+still learn something R everyday! As a side-hustle I am currently finalizing
+my doctoral thesis.</p>
 </div>
 <div id="publications" class="section level1">
 <h1>PUBLICATIONS</h1>
 <div id="research" class="section level2">
 <h2>RESEARCH</h2>
-<p>As a researcher I have authored and co-authored several research papers and
-posters, most of which can be found
+<p>As a researcher / research analyst I have authored and co-authored several
+research papers, most of which should be listed
 <a href="https://scholar.google.com/citations?user=fzccSmMAAAAJ/"><em>here</em></a>.</p>
 </div>
 <div id="r-packages" class="section level2">
 <h2>R PACKAGES</h2>
-<p>I am also a developer of R packages
-<a href="https://github.com/janbrederecke/prepareD/"><em>prepareD</em></a>,
-<a href="https://github.com/janbrederecke/analyzeD/"><em>analyzeD</em></a>,
-<a href="https://github.com/janbrederecke/visualizeD/"><em>visualizeD</em></a>,
-and <a href="https://github.com/janbrederecke/predicteD/"><em>predicteD</em></a>
-that are designed to improve data analysis workflows in my
-current projects. In addition, I am a contributor to the <a href="https://github.com/johnkarlen/climbeR/"><em>climbeR</em></a> package
-that can be used to visualize results of random forest models and will soon be
-available again on CRAN.</p>
+<p>When I find the time, I develop R packages that are designed to improve data
+analysis workflows in my current projects.
+Right now I work on:</p>
+<ul>
+<li><a href="https://github.com/janbrederecke/prepareD/"><em>prepareD</em></a> - functions for data
+preparation, project templates, and documentation.</li>
+<li><a href="https://github.com/janbrederecke/analyzeD/"><em>analyzeD</em></a> - functions for
+automated linear, logistic, and Cox regressions across multiple predictors /
+outcomes.</li>
+<li><a href="https://github.com/janbrederecke/visualizeD/"><em>visualizeD</em></a> - functions for
+often used variants of ggplot2 visualizations.</li>
+<li><a href="https://github.com/janbrederecke/predicteD/"><em>predicteD</em></a> - functions to help
+build Shiny apps based on predictive models that cannot be exporting including
+the original data (important e.g. in Cox-models).</li>
+</ul>
+<p>Some of the packages are still in their early development
+stages but will be be updated regularly in the future.
+Additionally, I am a contributor to the
+<a href="https://github.com/johnkarlen/climbeR/"><em>climbeR</em></a> package that is designed to
+visualize results of random forest models and will soon be available again on
+CRAN.</p>
 </div>
-</div>
-<div id="lately" class="section level1">
-<h1>LATELY</h1>
 <div id="r-shiny" class="section level2">
 <h2>R SHINY</h2>
-<p>I currently work on the development of multiple Shiny apps e.g. for the
-European Heart Failure Score project and others.</p>
+<p>Lately, I developed a passion for R Shiny and I currently work on multiple
+Shiny apps e.g. for predictive scores in the domain of cardiology.</p>
 </div>
 </div>
