--- a/public/index.html
+++ b/public/index.html
@@ -7,4 +7,4 @@
 <span itemprop=copyrightYear>2022</span>
 <span class=author itemprop=copyrightHolder><a href=https://janbrederecke.github.io/>JAN BREDERECKE</a>&nbsp;|&nbsp;</span>
 <span>MADE&nbsp;WITH&nbsp;<a href=https://github.com/Fastbyte01/KeepIt target=_blank rel="external nofollow noopener noreffer">KeepIt</a>&nbsp;&&nbsp;<a href=https://gohugo.io/ target=_blank rel="external nofollow noopener noreffer">Hugo&nbsp;|</a></span>
-<span><a href=https://github.com/janbrederecke/Impresssum-Imprint-Datenschutz-Privacy-Statement target=_blank rel="external nofollow noopener noreffer">|&nbsp;IMPRESSUM&nbsp;&&nbsp;DATENSCHUTZ&nbsp;/&nbsp;(IMPRINT&nbsp;&&nbsp;DATA&nbsp;POLICY)&nbsp;|</a></span></div></footer><script src=/js/vendor_main.min.js async></script></div></body></html>
+<span><a href=https://janbrederecke.github.io/impressum target=_blank rel="external nofollow noopener noreffer">|&nbsp;IMPRESSUM&nbsp;&&nbsp;DATENSCHUTZ&nbsp;/&nbsp;(IMPRINT&nbsp;&&nbsp;DATA&nbsp;POLICY)&nbsp;|</a></span></div></footer><script src=/js/vendor_main.min.js async></script></div></body></html>
