--- a/content/about.html
+++ b/content/about.html
@@ -22,7 +22,7 @@ my doctoral thesis.</p>
 <h2>RESEARCH</h2>
 <p>As a researcher / research analyst I have authored and co-authored several
 research papers, most of which should be listed
-<a href="https://scholar.google.com/citations?user=fzccSmMAAAAJ/"><em>here</em></a>.</p>
+<a href="https://scholar.google.com/citations?user=fzccSmMAAAAJ"><em>here</em></a>.</p>
 </div>
 <div id="r-packages" class="section level2">
 <h2>R PACKAGES</h2>
