--- a/public/about/index.html
+++ b/public/about/index.html
@@ -10,7 +10,7 @@ cardiovascular disease. I have been using R since I was an undergraduate and
 still learn something R everyday! As a side-hustle I am currently finalizing
 my doctoral thesis.</p></div><div id=publications class="section level1"><h1>PUBLICATIONS</h1><div id=research class="section level2"><h2>RESEARCH</h2><p>As a researcher / research analyst I have authored and co-authored several
 research papers, most of which should be listed
-<a href="https://scholar.google.com/citations?user=fzccSmMAAAAJ/"><em>here</em></a>.</p></div><div id=r-packages class="section level2"><h2>R PACKAGES</h2><p>When I find the time, I develop R packages that are designed to improve data
+<a href="https://scholar.google.com/citations?user=fzccSmMAAAAJ"><em>here</em></a>.</p></div><div id=r-packages class="section level2"><h2>R PACKAGES</h2><p>When I find the time, I develop R packages that are designed to improve data
 analysis workflows in my current projects.
 Right now I work on:</p><ul><li><a href=https://github.com/janbrederecke/prepareD/><em>prepareD</em></a> - functions for data
 preparation, project templates, and documentation.</li><li><a href=https://github.com/janbrederecke/analyzeD/><em>analyzeD</em></a> - functions for
